<resources>
    <string name="app_name">registration</string>
    <string name="enter_mobile_number_to_verify">Enter mobile number to verify</string>
    <string name="continue_text">Continue</string>
    <string name="sending_otp">Please wait while we send an OTP to this number</string>
    <string name="otp_sent">We have sent an SMS with OTP to </string>
    <string name="otp_sent_snackbar">An OTP has been sent to mobile number %s</string>
    <string name="verification">Verification</string>
    <string name="validate_otp">Validate OTP</string>
    <string name="welcome">Welcome</string>
    <string name="password">Password</string>
    <string name="ncg">\@ncg</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">login</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="logging_in">Logging In&#8230;</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="account_lock">Your account has been locked due to invalid attempts. Please try again after sometime.</string>
    <string name="next">Next</string>
    <string name="consent_manager_id">Consent Manager ID</string>
    <string name="forgot_consent_manger_id">Forgot Consent Manger ID?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="validate">validate</string>
    <string name="otp_is_valid_for_2_min">OTP is valid for 2 min</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="send_otp">Send OTP</string>
</resources>
