<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="in.projecteka.jataayu.registration.viewmodel.PasswordInputViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            >


            <TextView
                android:layout_margin="@dimen/content_margin_medium"
                android:id="@+id/account_lock_error_text"
                style="@style/TextAppearance.AccountLockErrorMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="@dimen/content_margin_medium"
                android:layout_marginBottom="18dp"
                android:text="@string/account_lock"
                android:visibility="@{viewModel.accountLockBlockEnable}"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/divider"/>

            <View
                android:id="@+id/divider"
                android:layout_marginTop="@dimen/content_margin_extra_large"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:visibility="@{viewModel.accountLockBlockDividerEnable}"
                android:background="#14212121"
                app:layout_constraintTop_toBottomOf="@+id/account_lock_error_text"
                tools:ignore="MissingConstraints"/>

            <ImageView
                android:id="@+id/tv_title"
                style="@style/Logo"
                app:layout_constraintBottom_toTopOf="@+id/til_password"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_margin="@dimen/content_margin_medium"
                android:id="@+id/til_password"
                style="@style/TextInputLayout.Password"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.4">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    style="@style/TextInputEditText.Password"
                    app:onValueChanged="@{viewModel}"
                    android:text="@={viewModel.inputPasswordLbl}"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/content_margin_medium"
                android:layout_marginTop="30dp"
                android:enabled="@{viewModel.loginEnabled}"
                android:text="@string/login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_password" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/btn_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:paddingBottom="5dp">

                <TextView
                    android:onClick="@{() -> viewModel.onForgotPasswordClicked()}"
                    android:clickable="true"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:padding="@dimen/content_margin_medium"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </androidx.constraintlayout.widget.ConstraintLayout>




        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/progress_bar_layout"
            layout="@layout/progress_layout"
            app:message="@{viewModel.showProgressMessage}"
            app:showProgress="@{viewModel.showProgress}" />

    </FrameLayout>
</layout>
