<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="in.projecteka.jataayu.registration.viewmodel.LoginOtpViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="in.projecteka.jataayu.registration.ui.fragment.LoginOtpFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="@dimen/content_margin_medium">

            <TextView
                android:id="@+id/account_lock_error_text"
                style="@style/TextAppearance.AccountLockErrorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="@dimen/content_margin_medium"
                android:padding="16dp"
                android:layout_marginBottom="18dp"
                android:text="@string/account_lock"
                android:visibility="@{viewModel.accountLockBlockEnable}"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/divider"
                app:layout_constraintVertical_bias="0.435" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:visibility="@{viewModel.accountLockBlockDividerEnable}"
                android:layout_marginTop="24dp"
                android:background="#14212121"
                app:layout_constraintTop_toTopOf="@id/tv_title"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="1dp" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/TextAppearance.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_margin_extra_extra_large"
                android:text="@string/welcome"
                android:paddingTop="20dp"
                android:textSize="32sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/lbl_enter_otp"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:visibility="invisible"
                >
                <TextView
                    android:id="@+id/otp_valid_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/otp_is_valid_for_2_min"
                    style="@style/TextAppearance.ListItemSubHeader"
                    />
                <TextView
                    android:id="@+id/otp_time_validity_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/TextAppearance.ListItemSubHeader"
                    android:text="@={viewModel.timeRemaining}"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/lbl_enter_otp"
                style="@style/TextAppearance.ListItemSubHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/toolbar_size"
                android:text="@string/enter_otp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.3"
                tools:text="@string/enter_otp" />

            <in.projecteka.jataayu.presentation.ui.view.OtpEditText
                android:id="@+id/et_otp"
                style="@style/Otp"
                android:layout_width="300dp"
                android:layout_height="@dimen/edittext_height"
                android:layout_marginTop="@dimen/content_margin_extra_small"
                android:text="@={viewModel.otpText}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_enter_otp"
                app:layout_goneMarginTop="@dimen/content_margin_large"
                app:onValueChanged="@{viewModel}" />

            <TextView
                style="@style/TextAppearance.ErrorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_margin_extra_extra_small"
                android:text="@{viewModel.errorLbl}"
                app:layout_constraintLeft_toLeftOf="@+id/et_otp"
                app:layout_constraintRight_toRightOf="@id/et_otp"
                app:layout_constraintTop_toBottomOf="@+id/et_otp"
                tools:text="@string/invalid_otp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_continue"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/content_margin_extra_extra_large"
                android:enabled="@{viewModel.continueEnabled}"
                android:text="@string/validate"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_otp"
                >

            </com.google.android.material.button.MaterialButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/btn_continue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/content_margin_36"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/colorPrimary"
                android:onClick="@{() -> viewModel.onClickResend()}"
                android:text="@string/resend_otp"
                />
            <include
                android:id="@+id/progress_bar_layout"
                app:showProgress="@{viewModel.showProgress}"
                app:message="@{viewModel.showProgressMessage}"
                layout="@layout/progress_layout"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>
