<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="ContentDescription"
    >

    <data>
        <variable
            name="viewModel"
            type="in.projecteka.jataayu.registration.viewmodel.ConsentManagerIDInputViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="in.projecteka.jataayu.registration.ui.fragment.ConsentManagerIDInputFragment">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:padding="@dimen/content_margin_medium"
            >

            <TextView
                android:id="@+id/tv_welcome"
                style="@style/TextAppearance.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_margin_extra_extra_large"
                android:text="@string/welcome"
                android:paddingTop="20dp"
                android:textSize="32sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_username_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:paddingBottom="5dp"
                android:text="@string/consent_manager_id"
                app:layout_constraintBottom_toTopOf="@id/cv_username"
                app:layout_constraintStart_toStartOf="parent"
                />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height_large"
                android:layout_marginTop="@dimen/content_margin_extra_small"
                app:cardElevation="@dimen/content_padding_medium"
                app:layout_constraintVertical_bias="0.4"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:padding="@dimen/content_margin_medium">

                    <EditText
                        android:inputType="textEmailAddress"
                        android:id="@+id/et_cm_id"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:layout_marginEnd="@dimen/content_margin_extra_extra_small"
                        android:layout_weight=".7"
                        android:background="@color/white"
                        android:cursorVisible="true"
                        android:drawableStart="@drawable/ic_username"
                        android:drawablePadding="@dimen/content_margin_medium"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:singleLine="true"
                        android:text="@={viewModel.inputUsernameLbl}"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_medium"
                        app:onValueChanged="@{viewModel}" />

                    <TextView
                        android:id="@+id/tv_provider_name"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:drawablePadding="@dimen/content_margin_medium"
                        android:text="@string/cm_config_provider"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_medium" />
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:padding="1dp"
                        app:imageResource="@{viewModel.cmIDCheckMarkImage}"
                        />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:enabled="@{viewModel.nextEnabled}"
                android:onClick="@{()-> viewModel.onNextButtonClicked()}"
                android:text="@string/next"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_username" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_next"
                app:layout_constraintBottom_toBottomOf="parent"
                android:paddingTop="20dp"
                >

                <TextView
                    android:onClick="@{() -> viewModel.onForgotConsentManagerID()}"
                    android:clickable="true"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:padding="@dimen/content_margin_medium"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/forgot_consent_manger_id"
                    android:paddingTop="30dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintVertical_bias="0.3"
                    android:id="@+id/tv_forgot_cm_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_dont_have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    app:layout_constraintTop_toBottomOf="@id/tv_forgot_cm_id"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_register"
                    style="@style/Button.Secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.onRegisterButtonClicked()}"
                    android:text="@string/register"
                    app:layout_constraintTop_toBottomOf="@id/tv_dont_have_account"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/progress_bar_layout"
            layout="@layout/progress_layout"
            app:message="@{viewModel.showProgressMessage}"
            app:showProgress="@{viewModel.showProgress}" />

    </FrameLayout>
</layout>
